module(
    name = "fixed-containers",
    repo_name = "com_tesla_fixed-containers",
)

bazel_dep(name = "googletest", version = "1.14.0.bcr.1")


http_archive = use_repo_rule(
    "@bazel_tools//tools/build_defs/repo:http.bzl",
    "http_archive",
)

http_archive(
    name = "com_github_ericniebler_range-v3",
    urls = ["https://github.com/ericniebler/range-v3/archive/53c40dd628450c977ee1558285ff43e0613fa7a9.tar.gz"],
    strip_prefix = "range-v3-53c40dd628450c977ee1558285ff43e0613fa7a9",
    sha256 = "2a3e956cc0174ea883d36c51aded8549af10078558177e8f6d76c5e33de950c1",
)

http_archive(
    name = "com_github_neargye_magic_enum",
    urls = ["https://github.com/Neargye/magic_enum/archive/d63a9d63717640705c6c9654d68fa6575d39bab8.tar.gz"],
    strip_prefix = "magic_enum-d63a9d63717640705c6c9654d68fa6575d39bab8",
    sha256 = "9b2b1788dd651feab88bcffb0b2ae3ded4c27142a295d6ede882c8fc8a327a35",
)